feat(migration): migrate diccionario linguistico

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ENUT",
-  "description": "Usos del Tiempo",
+  "name": "SICI",
+  "description": "SICI",
   "version": "0.0.2-SNAPSHOT",
   "private": false,
   "scripts": {
